--- a/payloads/makefile
+++ b/payloads/makefile
@@ -8,4 +8,5 @@ reverse_shell: reverse_shell.c
 bind_shell: bind_shell.c
 	gcc -shared -fPIC bind_shell.c -o bind_shell.so
 
-clean: rm reverse_shell.so bind_shell.so
+clean:
+	rm reverse_shell.so bind_shell.so
