--- a/payloads/makefile
+++ b/payloads/makefile
@@ -3,7 +3,7 @@ all:
 	make bind_shell
 
 obfuscated:
-	../tools/obfuscator.sh reverse_tcp.c
+	../tools/obfuscator.sh reverse_shell.c
 	../tools/obfuscator.sh bind_shell.c
 	make all
 	mv reverse_shell.c.bak reverse_shell.c
